<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, DWalletActivity!</string>
    <string name="txt_home">Hello this is test home activity</string>
    <string name="app_name">d-wallet</string>
    <string name="btn_login">Login</string>
    <string name="btn_reg">Register</string>
    <string name="btn_logout">Logout</string>
    <string name="lbl_email">E-mail</string>
    <string name="lbl_passwd">Password</string>
    <string name="btn_ok">OK</string>
    <string name="msg_loading">Loading..</string>
    <string name="no_connection">No Internet connection. Please connect it!</string>
    <string name="no_token">Unable to find token in session!</string>
    <string name="lbl_confirm_password">Confirm password</string>
    <string name="lbl_register">Register new account for d-wallet</string>
    <string name="msg_register_fields_not_valid">Invalid data provided for register fields</string>
    <string name="delete_cash_record">Delete record</string>
    <string name="cash_record_cancel">Cancel</string>

    <string-array name="cash_flow_types_array">
        <item>Profit</item>
        <item>Cost</item>
    </string-array>
    <string-array name="cash_flow_currency_types_array">
        <item>BGN</item>
        <item>USD</item>
        <item>EUR</item>
    </string-array>

</resources>