<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_register" />

        <TextView
            android:id="@+id/lbl_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_email"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/txtbox_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/lbl_passwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_passwd"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/txtbox_passwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/lbl_confirm_passwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_confirm_password"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/txtbox_confirm_passwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btn_reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_reg" />
    </LinearLayout>

</ScrollView>